--- a/src/the_tale/the_tale/guide/templates/persons.html
+++ b/src/the_tale/the_tale/guide/templates/persons.html
@@ -222,7 +222,7 @@
   Влияние партнёрам, конкурентам и их городам засчитывается того же типа (от ближнего круга, от народа) и от того же героя, что и самому Мастеру.
 </p>
 
-<p>Герой получает известность в городах партнёров и конкурентов Мастера, если они получают положительное влияение.</p>
+<p>Герой получает известность в городах партнёров и конкурентов Мастера, если они получают положительное влияние.</p>
 
 <p>
   Узнать о связях Мастера можно на его странице.
